Updates from ShareLaTeX

--- a/projects/project1/Latex/main.tex
+++ b/projects/project1/Latex/main.tex
@@ -1,80 +1,42 @@
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% University/School Laboratory Report
-% LaTeX Template
-% Version 3.1 (25/3/14)
-%
-% This template has been downloaded from:
-% http://www.LaTeXTemplates.com
-%
-% Original author:
-% Linux and Unix Users Group at Virginia Tech Wiki 
-% (https://vtluug.org/wiki/Example_LaTeX_chem_lab_report)
-%
-% License:
-% CC BY-NC-SA 3.0 (http://creativecommons.org/licenses/by-nc-sa/3.0/)
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
-%----------------------------------------------------------------------------------------
-%	PACKAGES AND DOCUMENT CONFIGURATIONS
-%----------------------------------------------------------------------------------------
-
-\documentclass{article}
-
-
-
-\usepackage{graphicx} % Required for the inclusion of images
-\usepackage{amsmath} % Required for some math elements 
-
-%package pour écrire en français
-\usepackage[utf8]{inputenc}
-
-%package pour les guiellemets
-\usepackage[cyr]{aeguill}
-
-%Pour les figues au milieu du texte
-\usepackage{wrapfig}
-
-\usepackage{epigraph}
+\documentclass[10pt,conference,compsocconf]{IEEEtran}
 
 \usepackage{hyperref}
+\usepackage{graphicx}	% For figure environment
 
-\usepackage[]{algorithm2e}
-
-\usepackage{graphicx}
-\usepackage{caption}
-\usepackage[cmyk]{xcolor}
-\usepackage{subcaption}
-\usepackage{color}
-\usepackage{listings}
-\usepackage{amsthm}
-\lstset{language=C++}
-
-
-\setlength\parindent{0pt} % Removes all indentation from paragraphs
-
-\renewcommand{\labelenumi}{\alph{enumi}.} % Make numbering in the enumerate environment by letter rather than number (e.g. section 6)
-
-%\usepackage{times} % Uncomment to use the Times New Roman font
-
-%----------------------------------------------------------------------------------------
-%	DOCUMENT INFORMATION
-%----------------------------------------------------------------------------------------
-
-\title{Machine Learning - Project 1} % Title
-
-\author{Julie Djeffal\\
-Fabien Zellweger\\
-Lo\"{i}s Huguenin    
-} % Author name
-
-\date{\today} % Date for the report
 
 \begin{document}
+\title{Machine Learning - Project 1}
 
-\maketitle % Insert the title, author and date
+\author{
+  Julie Djeffal\\
+  Lo\"{i}s Huguenin\\
+  Fabien Zellweger\\
+  \textit{Ecole Polythecnique Federale de Lausanne - Switzerland}
+}
 
- 
+\maketitle
+
+\begin{abstract}
+  A critical part of scientific discovery is the
+  communication of research findings to peers or the general public.
+  Mastery of the process of scientific communication improves the
+  visibility and impact of research. While this guide is a necessary
+  tool for learning how to write in a manner suitable for publication
+  at a scientific venue, it is by no means sufficient, on its own, to
+  make its reader an accomplished writer. 
+  This guide should be a starting point for further development of 
+  writing skills.
+\end{abstract}
+
+\section{Introduction}
+
+
+\section{The Structure of a Paper}
+
+
+
+\section{Tips for Good Writing}
+
 
 
 \end{document}
