Updates from ShareLaTeX

--- a/projects/project1/latex-example-paper/latex-template.tex
+++ b/projects/project1/latex-example-paper/latex-template.tex
@@ -29,7 +29,9 @@ $y_{train}$, the output variable is a binary variable that can take the values $
 %A revoir
 Once a model is created it is tested with the second data set to test its accuracy.\\
 \\
-Among the input variables, one is categorical with four categories going from zero to four. This variable represent the 
+Among the input variables, one is categorical with four categories going from zero to four. 
+%A discuter avant
+This variable is only useful to determine if some other features are or not undefined. So the decision is made to not remove it.
 
 
 %The ATLAS experiment at CERN provided simulated data used by physicists to optimize the analysis of the Higgs boson
