--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -24,9 +24,21 @@
     "from costs import * \n",
     "from least_squares import * \n",
     "from ridge import *\n",
+    "from cross_validation import *\n",
+    "from split_data import *\n",
+    "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -483,6 +495,31 @@
    "source": [
     "w = ridge_regression(y, tX, 0.1)\n",
     "print(w)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### TODO: Test with some other transformation: (taking the squared of the data, etc.)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cross Validation"
    ]
   },
   {
