add the csv files to a specific folder

--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "from Methods.proj1_helpers import *\n",
-    "DATA_TRAIN_PATH = 'train.csv' # TODO: download train data and supply path here \n",
+    "DATA_TRAIN_PATH = 'csv/train.csv' # TODO: download train data and supply path here \n",
     "y, tX, ids = load_csv_data(DATA_TRAIN_PATH)\n",
     "tX_tra = tX.T\n",
     "#conc = np.column_stack((y, tX))\n",
@@ -391,7 +391,7 @@
    },
    "outputs": [],
    "source": [
-    "DATA_TEST_PATH = 'test.csv' # TODO: download train data and supply path here \n",
+    "DATA_TEST_PATH = 'csv/test.csv' # TODO: download train data and supply path here \n",
     "_, tX_test, ids_test = load_csv_data(DATA_TEST_PATH)"
    ]
   },
@@ -404,7 +404,7 @@
    },
    "outputs": [],
    "source": [
-    "OUTPUT_PATH = 'sample-submission.csv' # TODO: fill in desired name of output file for submission\n",
+    "OUTPUT_PATH = 'csv/sample-submission.csv' # TODO: fill in desired name of output file for submission\n",
     "y_pred = predict_labels(weights, tX_test)\n",
     "create_csv_submission(ids_test, y_pred, OUTPUT_PATH)"
    ]
