--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -2,20 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Useful starting lines\n",
     "%matplotlib inline\n",
@@ -27,6 +18,7 @@
     "from Methods.cross_validation import *\n",
     "from Methods.split_data import *\n",
     "from Methods.scaling_standardization import *\n",
+    "from Methods.build_polynomial import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -356,12 +348,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[  1.00000000e+00   1.38470000e+02   1.91739409e+04   1.00000000e+00\n",
+      "    5.16550000e+01   2.66823903e+03]\n",
+      " [  1.00000000e+00   1.60937000e+02   2.59007180e+04   1.00000000e+00\n",
+      "    6.87680000e+01   4.72903782e+03]\n",
+      " [  1.00000000e+00  -9.99000000e+02   9.98001000e+05   1.00000000e+00\n",
+      "    1.62172000e+02   2.62997576e+04]\n",
+      " ..., \n",
+      " [  1.00000000e+00   1.05457000e+02   1.11211788e+04   1.00000000e+00\n",
+      "    6.05260000e+01   3.66339668e+03]\n",
+      " [  1.00000000e+00   9.49510000e+01   9.01569240e+03   1.00000000e+00\n",
+      "    1.93620000e+01   3.74887044e+02]\n",
+      " [  1.00000000e+00  -9.99000000e+02   9.98001000e+05   1.00000000e+00\n",
+      "    7.27560000e+01   5.29343554e+03]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "tx_squares = build_poly_matrix(tX, 2)\n",
+    "print(tx_squares)"
+   ]
   },
   {
    "cell_type": "markdown",
