--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -348,35 +348,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[  1.00000000e+00   1.38470000e+02   1.91739409e+04   1.00000000e+00\n",
-      "    5.16550000e+01   2.66823903e+03]\n",
-      " [  1.00000000e+00   1.60937000e+02   2.59007180e+04   1.00000000e+00\n",
-      "    6.87680000e+01   4.72903782e+03]\n",
-      " [  1.00000000e+00  -9.99000000e+02   9.98001000e+05   1.00000000e+00\n",
-      "    1.62172000e+02   2.62997576e+04]\n",
-      " ..., \n",
-      " [  1.00000000e+00   1.05457000e+02   1.11211788e+04   1.00000000e+00\n",
-      "    6.05260000e+01   3.66339668e+03]\n",
-      " [  1.00000000e+00   9.49510000e+01   9.01569240e+03   1.00000000e+00\n",
-      "    1.93620000e+01   3.74887044e+02]\n",
-      " [  1.00000000e+00  -9.99000000e+02   9.98001000e+05   1.00000000e+00\n",
-      "    7.27560000e+01   5.29343554e+03]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "tx_squares = build_poly_matrix(tX, 2)\n",
-    "print(tx_squares)"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -387,12 +364,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "tx_squares = build_poly_matrix(tX, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
