--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -578,53 +578,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[ 2  4  8 12]\n",
-      " [ 3  5  9 13]\n",
-      " [ 1  6 10 14]\n",
-      " [ 0  7 11 15]]\n",
-      "3\n",
-      "[[ 0  7 11]\n",
-      " [ 1  6 10]\n",
-      " [ 2  4  8]\n",
-      " [ 3  5  9]]\n",
-      "[15 14 12 13]\n",
-      "x_tr\n",
-      "[[ 0  7 11]\n",
-      " [ 1  6 10]]\n",
-      "x_te\n",
-      "[[2 4 8]\n",
-      " [3 5 9]]\n",
-      "y_tr\n",
-      "[15 14]\n",
-      "y_te\n",
-      "[12 13]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Data split for the tests\n",
-    "#x_tr, y_tr, x_te, y_te = split_data(tX, y, ratio=3, seed=1)\n",
-    "a = np.array([[2,3,1,0],[4,5,6,7], [8,9,10,11]])\n",
-    "b = np.array([12,13,14,15])\n",
-    "x_tr, y_tr, x_te, y_te = split_data(a.T, b, 0.4)\n",
-    "print('x_tr')\n",
-    "print(x_tr)\n",
-    "print('x_te')\n",
-    "print(x_te)\n",
-    "print('y_tr')\n",
-    "print(y_tr)\n",
-    "print('y_te')\n",
-    "print(y_te)\n",
-    "#split_data(tX, y, 0.4)"
+    "x_tr, y_tr, x_te, y_te = split_data(tX, y, 0.4)"
    ]
   },
   {
