method for deletion and mean is in the .ipynb now

--- a/projects/project1/scripts/project1.ipynb
+++ b/projects/project1/scripts/project1.ipynb
@@ -2,9 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-
    "execution_count": 2,
-
    "metadata": {
     "collapsed": false
    },
@@ -21,6 +19,7 @@
     "from Methods.split_data import *\n",
     "from Methods.scaling_standardization import *\n",
     "from Methods.build_polynomial import *\n",
+    "from Methods.clearDataset import *\n",
     "\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -312,7 +311,11 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "PERCENT_FACTOR = 0.5\n",
+    "dele_tX_temp = deleteNoneWantedData(tX, PERCENT_FACTOR)\n",
+    "dele_tX = deleteUnwantedLine(dele_tX_temp)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -328,7 +331,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "mean_tX = averageData(tX)"
+   ]
   },
   {
    "cell_type": "markdown",
