Create method to add features

--- a/projects/project1/scripts/project1-Julie.ipynb
+++ b/projects/project1/scripts/project1-Julie.ipynb
@@ -139,7 +139,7 @@
    },
    "outputs": [],
    "source": [
-    "#tX = data_scaling(tX.T)"
+    "tX = data_scaling(tX.T)"
    ]
   },
   {
@@ -201,222 +201,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Polynomial Transformation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Polynome"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### cubic"
+    "## Big Magic Method"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tX = build_poly_matrix(tX, 3)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Sqrt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Other Transformations"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Log"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Other? "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Model Selection"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Least Squares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x.shape\n",
+      "(250000,)\n",
+      "y.shape\n",
+      "(250000,)\n",
+      "tX.shape\n",
+      "(250000, 30)\n",
+      "tX.T[1]\n",
+      "[ 0.01396362  0.01739099  0.03609781 ...,  0.01574029  0.00749603\n",
+      "  0.0181897 ]\n",
+      "lol\n",
+      "x.shape\n",
+      "(250000,)\n",
+      "y.shape\n",
+      "(250000,)\n",
+      "tX.shape\n",
+      "(250000, 30)\n",
+      "tX.T[1]\n",
+      "[ 0.03585047  0.01739099  0.02429399  0.01326085  0.00409965  0.07807848\n",
+      "  0.00345367  0.0043138   0.00403441  0.0286845   0.00379428  0.00390143\n",
+      "  0.00371002  0.01203274  0.0040266   0.00301519  0.01101212  0.00371857\n",
+      "  0.00363886  0.01257149  0.0032345   0.03657327  0.00381851  0.01287631\n",
+      "  0.00376343  0.00385016  0.0151702   0.00361586  0.00361792  0.01287631\n",
+      "  0.0005902 ]\n"
+     ]
+    }
+   ],
    "source": [
-    "#w = least_squares(y, tX)\n",
-    "#print(w)"
+    "#for i in range(0, 30):\n",
+    "#print(tX.shape)\n",
+    "tX = add_feature(y, tX.T[1], tX, multiply,degree=2)\n",
+    "\n",
+    "#print(tX.shape)\n",
+    "#newx = add_feature(y, , tX ,multiply,degree=2)  \n",
+    "\n",
+    "a = np.array([1, 2, 3])\n",
+    "\n",
+    "b = multiply(a, degree=2)\n",
+    "c = log_def(a)\n",
+    "\n",
+    "print('tX.T[1]')\n",
+    "print(tX.T[1])\n",
+    "\n",
+    "print('lol')\n",
+    "\n",
+    "tX = add_feature(y, tX.T[2], tX, multiply, degree=2)\n",
+    "\n",
+    "\n",
+    "print('tX.T[1]')\n",
+    "print(tX.T[1])\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Ridge Regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "#w_ridge = ridge_regression(y, tX, lamb=1)\n",
-    "#print(w_ridge)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Least squares Gradient Descent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Least squares Stochastique Gradient Descent"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Logistic regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Reg logistic regression"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Verification"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -429,26 +277,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Least Squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "seed = 1\n",
+    "k_fold = 10\n",
+    "\n",
+    "# split data in k fold\n",
+    "k_indices = build_k_indices(y, k_fold, seed)\n",
+    "\n",
+    "# define lists to store the loss of training data and test data\n",
+    "rmse_tr = []\n",
+    "rmse_te = []\n",
+    "k_list = list(range(k_fold))\n",
+    "tot_loss_tr = 0\n",
+    "tot_loss_te = 0\n",
+    "for k in k_list:\n",
+    "    loss_tr, loss_te, accuracy_least = cross_validation(y, tX, k_indices, k, least_squares)\n",
+    "    tot_loss_tr += loss_tr\n",
+    "    tot_loss_te += loss_te\n",
+    "rmse_tr.append(np.sqrt(2/k_fold * tot_loss_tr))\n",
+    "rmse_te.append(np.sqrt(2/k_fold * tot_loss_te))\n",
+    "\n",
+    "accuracy_least"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Ridge"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.78912\n",
-      "1\n",
-      "2.06913808111e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "seed = 1\n",
     "k_fold = 10\n",
@@ -484,54 +458,6 @@
     "print(best_accuracy)\n",
     "print(best_k)\n",
     "print(best_lamb)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Least Squares"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.78695999999999999"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "seed = 1\n",
-    "k_fold = 10\n",
-    "\n",
-    "# split data in k fold\n",
-    "k_indices = build_k_indices(y, k_fold, seed)\n",
-    "\n",
-    "# define lists to store the loss of training data and test data\n",
-    "rmse_tr = []\n",
-    "rmse_te = []\n",
-    "k_list = list(range(k_fold))\n",
-    "tot_loss_tr = 0\n",
-    "tot_loss_te = 0\n",
-    "for k in k_list:\n",
-    "    loss_tr, loss_te, accuracy_least = cross_validation(y, tX, k_indices, k, least_squares)\n",
-    "    tot_loss_tr += loss_tr\n",
-    "    tot_loss_te += loss_te\n",
-    "rmse_tr.append(np.sqrt(2/k_fold * tot_loss_tr))\n",
-    "rmse_te.append(np.sqrt(2/k_fold * tot_loss_te))\n",
-    "\n",
-    "accuracy_least"
    ]
   },
   {
