Correct add_new_features

--- a/projects/project1/scripts/project1-Julie.ipynb
+++ b/projects/project1/scripts/project1-Julie.ipynb
@@ -201,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Big Magic Method"
+    "## Find Best Model"
    ]
   },
   {
@@ -215,35 +215,270 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x.shape\n",
-      "(250000,)\n",
-      "y.shape\n",
-      "(250000,)\n",
-      "tX.shape\n",
-      "(250000, 30)\n",
-      "tX.T[1]\n",
-      "[ 0.01396362  0.01739099  0.03609781 ...,  0.01574029  0.00749603\n",
-      "  0.0181897 ]\n",
-      "lol\n",
-      "x.shape\n",
-      "(250000,)\n",
-      "y.shape\n",
-      "(250000,)\n",
-      "tX.shape\n",
-      "(250000, 30)\n",
-      "tX.T[1]\n",
-      "[ 0.03585047  0.01739099  0.02429399  0.01326085  0.00409965  0.07807848\n",
-      "  0.00345367  0.0043138   0.00403441  0.0286845   0.00379428  0.00390143\n",
-      "  0.00371002  0.01203274  0.0040266   0.00301519  0.01101212  0.00371857\n",
-      "  0.00363886  0.01257149  0.0032345   0.03657327  0.00381851  0.01287631\n",
-      "  0.00376343  0.00385016  0.0151702   0.00361586  0.00361792  0.01287631\n",
-      "  0.0005902 ]\n"
+      "0\n",
+      "0.7606\n",
+      "5\n",
+      "1\n",
+      "0.75808\n",
+      "5\n",
+      "2\n",
+      "0.759\n",
+      "5\n",
+      "3\n",
+      "0.75908\n",
+      "4\n",
+      "4\n",
+      "0.75908\n",
+      "4\n",
+      "5\n",
+      "0.75908\n",
+      "4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/JulieDjeffal/Documents/EPFL/pattern/2016/ML_project1/projects/project1/scripts/Methods/build_polynomial.py:17: RuntimeWarning: divide by zero encountered in log\n",
+      "  new = np.array([np.log(x)])\n",
+      "/Users/JulieDjeffal/anaconda/lib/python3.5/site-packages/numpy/lib/function_base.py:964: RuntimeWarning: invalid value encountered in multiply\n",
+      "  scl = np.multiply(avg, 0) + scl\n",
+      "/Users/JulieDjeffal/anaconda/lib/python3.5/site-packages/numpy/lib/function_base.py:2490: RuntimeWarning: invalid value encountered in subtract\n",
+      "  X -= avg[:, None]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "0.75908\n",
+      "4\n",
+      "7\n",
+      "0.7596\n",
+      "5\n",
+      "8\n",
+      "0.76012\n",
+      "5\n",
+      "9\n",
+      "0.76348\n",
+      "5\n",
+      "10\n",
+      "0.7656\n",
+      "5\n",
+      "11\n",
+      "0.7656\n",
+      "5\n",
+      "12\n",
+      "0.7656\n",
+      "5\n",
+      "13\n",
+      "0.76876\n",
+      "4\n",
+      "14\n",
+      "0.77052\n",
+      "4\n",
+      "15\n",
+      "0.77052\n",
+      "4\n",
+      "16\n",
+      "0.77076\n",
+      "4\n",
+      "17\n",
+      "0.7714\n",
+      "2\n",
+      "18\n",
+      "0.77148\n",
+      "2\n",
+      "19\n",
+      "0.77144\n",
+      "4\n",
+      "20\n",
+      "0.77144\n",
+      "4\n",
+      "21\n",
+      "0.773\n",
+      "4\n",
+      "22\n",
+      "0.77252\n",
+      "8\n",
+      "23\n",
+      "0.77252\n",
+      "8\n",
+      "24\n",
+      "0.77576\n",
+      "8\n",
+      "25\n",
+      "0.77624\n",
+      "1\n",
+      "26\n",
+      "0.77628\n",
+      "1\n",
+      "27\n",
+      "0.77888\n",
+      "5\n",
+      "28\n",
+      "0.77908\n",
+      "8\n",
+      "29\n",
+      "0.77976\n",
+      "1\n"
      ]
     }
    ],
    "source": [
+    "for i in range(0, 30):\n",
+    "    tX = add_feature(y, tX.T[i], tX, log_def)\n",
+    "    seed = 1\n",
+    "    k_fold = 10\n",
+    "\n",
+    "    # split data in k fold\n",
+    "    k_indices = build_k_indices(y, k_fold, seed)\n",
+    "\n",
+    "    # define lists to store the loss of training data and test data\n",
+    "    rmse_tr = []\n",
+    "    rmse_te = []\n",
+    "    k_list = list(range(k_fold))\n",
+    "    tot_loss_tr = 0\n",
+    "    tot_loss_te = 0\n",
+    "    best_accuracy = 0\n",
+    "    best_k = 0\n",
+    "    for k in k_list:\n",
+    "        loss_tr, loss_te, accuracy_least = cross_validation(y, tX, k_indices, k, least_squares)\n",
+    "        tot_loss_tr += loss_tr\n",
+    "        tot_loss_te += loss_te\n",
+    "        if accuracy_least > best_accuracy:\n",
+    "            best_accuracy = accuracy_least\n",
+    "            best_k = k\n",
+    "    rmse_tr.append(np.sqrt(2/k_fold * tot_loss_tr))\n",
+    "    rmse_te.append(np.sqrt(2/k_fold * tot_loss_te))\n",
+    "    print(accuracy_least)\n",
+    "    print(best_k)\n",
+    "    \n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.78144\n",
+      "1\n",
+      "0.78144\n",
+      "1\n",
+      "0.78208\n",
+      "1\n",
+      "0.78208\n",
+      "1\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78236\n",
+      "7\n",
+      "0.78408\n",
+      "8\n",
+      "0.7846\n",
+      "8\n",
+      "0.7846\n",
+      "8\n",
+      "0.78456\n",
+      "8\n",
+      "0.78472\n",
+      "8\n",
+      "0.78472\n",
+      "8\n",
+      "0.78496\n",
+      "8\n",
+      "0.78496\n",
+      "8\n",
+      "0.78384\n",
+      "8\n",
+      "0.78384\n",
+      "8\n",
+      "0.78384\n",
+      "8\n",
+      "0.78384\n",
+      "8\n",
+      "0.78384\n",
+      "8\n",
+      "0.78472\n",
+      "8\n",
+      "0.78404\n",
+      "8\n",
+      "0.78404\n",
+      "8\n",
+      "0.78424\n",
+      "8\n",
+      "0.78424\n",
+      "8\n",
+      "0.78424\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(0, 30):\n",
+    "    tX = add_feature(y, tX.T[i], tX, multiply, degree=2)\n",
+    "    seed = 1\n",
+    "    k_fold = 10\n",
+    "\n",
+    "    # split data in k fold\n",
+    "    k_indices = build_k_indices(y, k_fold, seed)\n",
+    "\n",
+    "    # define lists to store the loss of training data and test data\n",
+    "    rmse_tr = []\n",
+    "    rmse_te = []\n",
+    "    k_list = list(range(k_fold))\n",
+    "    tot_loss_tr = 0\n",
+    "    tot_loss_te = 0\n",
+    "    best_accuracy = 0\n",
+    "    best_k = 0\n",
+    "    for k in k_list:\n",
+    "        loss_tr, loss_te, accuracy_least = cross_validation(y, tX, k_indices, k, least_squares)\n",
+    "        tot_loss_tr += loss_tr\n",
+    "        tot_loss_te += loss_te\n",
+    "        if accuracy_least > best_accuracy:\n",
+    "            best_accuracy = accuracy_least\n",
+    "            best_k = k\n",
+    "    rmse_tr.append(np.sqrt(2/k_fold * tot_loss_tr))\n",
+    "    rmse_te.append(np.sqrt(2/k_fold * tot_loss_te))\n",
+    "    print(accuracy_least)\n",
+    "    print(best_k)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Big Magic Method"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "#for i in range(0, 30):\n",
-    "#print(tX.shape)\n",
     "tX = add_feature(y, tX.T[1], tX, multiply,degree=2)\n",
     "\n",
     "#print(tX.shape)\n",
@@ -257,9 +492,17 @@
     "print('tX.T[1]')\n",
     "print(tX.T[1])\n",
     "\n",
-    "print('lol')\n",
+    "print('next step')\n",
     "\n",
     "tX = add_feature(y, tX.T[2], tX, multiply, degree=2)\n",
+    "\n",
+    "\n",
+    "print('tX.T[1]')\n",
+    "print(tX.T[1])\n",
+    "\n",
+    "print('next step')\n",
+    "\n",
+    "tX = add_feature(y, tX.T[3], tX, multiply, degree=2)\n",
     "\n",
     "\n",
     "print('tX.T[1]')\n",
