--- a/projects/project1/scripts/project1-Lois.ipynb
+++ b/projects/project1/scripts/project1-Lois.ipynb
@@ -670,117 +670,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "61 (61, 1)\n",
-      "Current iteration=0, the loss=0.6931471805599603\n",
-      "Current iteration=10, the loss=0.6306966354645358\n",
-      "Current iteration=20, the loss=0.5859010510973844\n",
-      "Current iteration=30, the loss=0.5616098261360106\n",
-      "Current iteration=40, the loss=0.5192064082375907\n",
-      "Current iteration=50, the loss=0.5084974712238631\n",
-      "Current iteration=60, the loss=0.495954374026444\n",
-      "Current iteration=70, the loss=0.5016910857705141\n",
-      "Current iteration=80, the loss=0.49841076492883457\n",
-      "Current iteration=90, the loss=0.479933038819674\n",
-      "Current iteration=100, the loss=0.473753625123179\n",
-      "Current iteration=110, the loss=0.4611327270997141\n",
-      "Current iteration=120, the loss=0.46328739796637264\n",
-      "Current iteration=130, the loss=0.46142426605758347\n",
-      "Current iteration=140, the loss=0.44796882627239504\n",
-      "Current iteration=150, the loss=0.4540996321233553\n",
-      "Current iteration=160, the loss=0.4588907894216881\n",
-      "Current iteration=170, the loss=0.45281923652151934\n",
-      "Current iteration=180, the loss=0.4492565899751094\n",
-      "Current iteration=190, the loss=0.44719923061761735\n",
-      "Current iteration=200, the loss=0.4450493509759944\n",
-      "Current iteration=210, the loss=0.46631917164444864\n",
-      "Current iteration=220, the loss=0.4511478392053003\n",
-      "Current iteration=230, the loss=0.4516310112107763\n",
-      "Current iteration=240, the loss=0.45580332860988154\n",
-      "Current iteration=250, the loss=0.46216587475092485\n",
-      "Current iteration=260, the loss=0.4579101679299164\n",
-      "Current iteration=270, the loss=0.4456431947768379\n",
-      "Current iteration=280, the loss=0.45599373320354136\n",
-      "Current iteration=290, the loss=0.4506227912583778\n",
-      "Current iteration=300, the loss=0.45306442725794716\n",
-      "Current iteration=310, the loss=0.44608372516637784\n",
-      "Current iteration=320, the loss=0.4441173098513363\n",
-      "Current iteration=330, the loss=0.44164820664300153\n",
-      "Current iteration=340, the loss=0.45335487131871754\n",
-      "Current iteration=350, the loss=0.45360863820288183\n",
-      "Current iteration=360, the loss=0.45666466399558636\n",
-      "Current iteration=370, the loss=0.44577344773537986\n",
-      "Current iteration=380, the loss=0.45679293216631534\n",
-      "Current iteration=390, the loss=0.45433715515551387\n",
-      "Current iteration=400, the loss=0.45690540145047215\n",
-      "Current iteration=410, the loss=0.4649862263065019\n",
-      "Current iteration=420, the loss=0.45237481603365787\n",
-      "Current iteration=430, the loss=0.4464241447543545\n",
-      "Current iteration=440, the loss=0.4474391055053251\n",
-      "Current iteration=450, the loss=0.4505150568402631\n",
-      "Current iteration=460, the loss=0.4400189184740729\n",
-      "Current iteration=470, the loss=0.4497266017355333\n",
-      "Current iteration=480, the loss=0.4489221963270567\n",
-      "Current iteration=490, the loss=0.43676265429971495\n",
-      "Current iteration=500, the loss=0.4558858996239549\n",
-      "Current iteration=510, the loss=0.4456011782622351\n",
-      "Current iteration=520, the loss=0.4399612185671303\n",
-      "Current iteration=530, the loss=0.4576859751278188\n",
-      "Current iteration=540, the loss=0.43081559902111904\n",
-      "Current iteration=550, the loss=0.4407379665332062\n",
-      "Current iteration=560, the loss=0.4677564339786792\n",
-      "Current iteration=570, the loss=0.45544092029321387\n",
-      "Current iteration=580, the loss=0.4486872090158387\n",
-      "Current iteration=590, the loss=0.45951438470045125\n",
-      "Current iteration=600, the loss=0.4416574336757486\n",
-      "Current iteration=610, the loss=0.46101470860485283\n",
-      "Current iteration=620, the loss=0.46348761453824494\n",
-      "Current iteration=630, the loss=0.4577961312134835\n",
-      "Current iteration=640, the loss=0.4500675818863256\n",
-      "Current iteration=650, the loss=0.4455257818428347\n",
-      "Current iteration=660, the loss=0.4391264458432705\n",
-      "Current iteration=670, the loss=0.4622796519762114\n",
-      "Current iteration=680, the loss=0.4558115325134704\n",
-      "Current iteration=690, the loss=0.4416297589536748\n",
-      "Current iteration=700, the loss=0.45563546650022435\n",
-      "Current iteration=710, the loss=0.45809372575314083\n",
-      "Current iteration=720, the loss=0.46031049810949237\n",
-      "Current iteration=730, the loss=0.44644970719846977\n",
-      "Current iteration=740, the loss=0.4539133876071314\n",
-      "Current iteration=750, the loss=0.44505708050908976\n",
-      "Current iteration=760, the loss=0.46849779645674267\n",
-      "Current iteration=770, the loss=0.47193299876365397\n",
-      "Current iteration=780, the loss=0.44873179915342926\n",
-      "Current iteration=790, the loss=0.4687404405380324\n",
-      "Current iteration=800, the loss=0.4523908311250345\n",
-      "Current iteration=810, the loss=0.44474182466557904\n",
-      "Current iteration=820, the loss=0.4693020167547877\n",
-      "Current iteration=830, the loss=0.44190796942804605\n",
-      "Current iteration=840, the loss=0.4668754910719517\n",
-      "Current iteration=850, the loss=0.45122515978447103\n",
-      "Current iteration=860, the loss=0.45579999641069124\n",
-      "Current iteration=870, the loss=0.446049625482721\n",
-      "Current iteration=880, the loss=0.45674999531580646\n",
-      "Current iteration=890, the loss=0.43634488246658854\n",
-      "Current iteration=900, the loss=0.448181065195425\n",
-      "Current iteration=910, the loss=0.461422577438464\n",
-      "Current iteration=920, the loss=0.45806240958456307\n",
-      "Current iteration=930, the loss=0.463915745000796\n",
-      "Current iteration=940, the loss=0.44710194696461425\n",
-      "Current iteration=950, the loss=0.4385291467924569\n",
-      "Current iteration=960, the loss=0.44569607767713904\n",
-      "Current iteration=970, the loss=0.4494597768936634\n",
-      "Current iteration=980, the loss=0.4688481512526376\n",
-      "Current iteration=990, the loss=0.44677097291193296\n",
-      "The loss=0.4521727806722249\n"
+     "ename": "TypeError",
+     "evalue": "build_poly() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-46-e8e50fd872ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mstd_tX_temp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_standardization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrem_mean_tX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#m, w = least_squares(y_binary, mean_std_tX)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mw_log\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_regression_gradient_descent_demo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_binary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m125000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmean_std_tX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m125000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py\u001b[0m in \u001b[0;36mbuild_poly_matrix\u001b[1;34m(tx, degree)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mbuild_poly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m     \u001b[0mconc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[0mone\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mbuild_poly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m     \u001b[0mconc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[0mone\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: build_poly() takes 1 positional argument but 2 were given"
      ]
     }
    ],
@@ -790,7 +695,7 @@
     "y_binary[y_binary == -1] = 0\n",
     "std_tX_temp = data_standardization(rem_mean_tX.T)\n",
     "#m, w = least_squares(y_binary, mean_std_tX)\n",
-    "w_log = logistic_regression_gradient_descent_demo(y_binary[:125000], build_poly_matrix(mean_std_tX[:125000],2), 4000)"
+    "w_log = logistic_regression_gradient_descent_demo(y_binary[:125000], build_poly_matrix(mean_std_tX[:125000],3), 4000)"
    ]
   },
   {
