--- a/projects/project1/scripts/project1-Lois.ipynb
+++ b/projects/project1/scripts/project1-Lois.ipynb
@@ -670,22 +670,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "build_poly() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-46-e8e50fd872ab>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mstd_tX_temp\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_standardization\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrem_mean_tX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;31m#m, w = least_squares(y_binary, mean_std_tX)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mw_log\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlogistic_regression_gradient_descent_demo\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_binary\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m125000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmean_std_tX\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;36m125000\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py\u001b[0m in \u001b[0;36mbuild_poly_matrix\u001b[1;34m(tx, degree)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mbuild_poly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m     \u001b[0mconc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[0mone\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/huguenin/ML_project1/projects/project1/scripts/Methods/build_polynomial.py\u001b[0m in \u001b[0;36m<listcomp>\u001b[1;34m(.0)\u001b[0m\n\u001b[0;32m     31\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     32\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mbuild_poly_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 33\u001b[1;33m     \u001b[0mres\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m \u001b[0mbuild_poly\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mx\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mT\u001b[0m \u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     34\u001b[0m     \u001b[0mconc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m     \u001b[0mone\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtx\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: build_poly() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "91 (91, 1)\n",
+      "Current iteration=0, the loss=0.6931471805600546\n",
+      "Current iteration=10, the loss=0.5560605023551506\n",
+      "Current iteration=20, the loss=0.502523304316183\n",
+      "Current iteration=30, the loss=0.7231742339685443\n",
+      "Current iteration=40, the loss=0.5524834673901913\n",
+      "Current iteration=50, the loss=0.49461812820321566\n",
+      "Current iteration=60, the loss=0.4659319931808204\n",
+      "Current iteration=70, the loss=0.45823318755528425\n",
+      "Current iteration=80, the loss=0.4428149486003682\n",
+      "Current iteration=90, the loss=0.4458923879503216\n",
+      "Current iteration=100, the loss=0.4389236750754743\n",
+      "Current iteration=110, the loss=0.4351315857153093\n",
+      "Current iteration=120, the loss=0.44030476735544033\n",
+      "Current iteration=130, the loss=0.43354694309461683\n",
+      "Current iteration=140, the loss=0.4484331003394187\n",
+      "Current iteration=150, the loss=0.4449329287388712\n",
+      "Current iteration=160, the loss=0.4384573790342013\n",
+      "Current iteration=170, the loss=0.44331182348160064\n",
+      "Current iteration=180, the loss=0.44011917593005884\n",
+      "Current iteration=190, the loss=0.44344268189428476\n",
+      "Current iteration=200, the loss=0.45099431989110356\n",
+      "Current iteration=210, the loss=0.4353957907757243\n",
+      "Current iteration=220, the loss=0.43980823678109626\n",
+      "Current iteration=230, the loss=0.4420914639331222\n",
+      "Current iteration=240, the loss=0.44322890454236774\n",
+      "Current iteration=250, the loss=0.4406954555870738\n",
+      "Current iteration=260, the loss=0.4412291311906661\n",
+      "Current iteration=270, the loss=0.4436539472472548\n",
+      "Current iteration=280, the loss=0.43659548115194174\n",
+      "Current iteration=290, the loss=0.4422392322374218\n",
+      "The loss=0.4426894545509095\n"
      ]
     }
    ],
@@ -695,7 +720,7 @@
     "y_binary[y_binary == -1] = 0\n",
     "std_tX_temp = data_standardization(rem_mean_tX.T)\n",
     "#m, w = least_squares(y_binary, mean_std_tX)\n",
-    "w_log = logistic_regression_gradient_descent_demo(y_binary[:125000], build_poly_matrix(mean_std_tX[:125000],3), 4000)"
+    "w_log = logistic_regression_gradient_descent_demo(y_binary[:125000], build_poly_matrix(mean_std_tX[:125000],3), batch_size=10000)"
    ]
   },
   {
@@ -727,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 54,
    "metadata": {
     "collapsed": false
    },
@@ -735,16 +760,16 @@
     {
      "data": {
       "text/plain": [
-       "0.92767235595332909"
+       "0.91451407862317791"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "vect = sigmoid(np.dot( build_poly_matrix(mean_std_tX[-250000:],2), w_log))\n",
+    "vect = sigmoid(np.dot( build_poly_matrix(mean_std_tX[-250000:],3), w_log))\n",
     "vect[vect >= 0.5] = 1\n",
     "vect[vect < 0.5] = -1\n",
     "e_log = y[-250000:] - vect[:,0]\n",
